k8s/helmchart/rabbitmq/rabbitmq-mgnt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/cors-allow-headers: X-Forwarded-For
      #nginx.ingress.kubernetes.io/cors-allow-methods: GET, POST, HEAD, OPTIONS
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: dev-runable-rabbitmq
  namespace: rabbitmq-system
spec:
  ingressClassName: nginx
  rules:
  - host: dev-rabbitmq-manager.runable.io
    http:
      paths:
      - backend:
          service:
            name: rabbitmq-node
            port:
              number: 15672
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - dev-rabbitmq-manager.runable.io
    secretName: tls-runable.io
